--- a/css/styles.css
+++ b/css/styles.css
@@ -474,9 +474,10 @@ padding-bottom: 100px;
 
 .modal {
     position: absolute;
-    left: 516px;
-    top: 88px;
-    
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+
     width: 408px;
     height: 576px;
     background-color: #FCFCFC;
@@ -597,5 +598,43 @@ padding-bottom: 100px;
     color: var(--slate-text-color);}
 
 
+.product-thumb {
+    position: relative;
+    overflow: hidden;    
+}
 
-   
+.product-overlay {    
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+    background-color: var(--primary-bg-color);
+    opacity: 0;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.work-item:hover .product-overlay
+{transform: translateY(0);
+    opacity: 1;}
+
+.product-action {
+    position: absolute;
+    left: 32px;
+    top: 40px;
+
+    width: 296px;    
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #F4F4FD;
+    opacity: 0;
+    }
+
+.work-item:hover .product-action 
+{ opacity: 1;}
+
+
