--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,8 @@
 
     --work-cards-row-gap: 24px;
     --work-cards-colum-gap: 48px;
+
+    --transform-style: cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -110,6 +112,8 @@ body {font-family: "Roboto", sans-serif;
 }
 
 .nav-link {
+    position: relative;
+
     padding-top: 24px;
     padding-bottom: 24px;
 
@@ -117,14 +121,26 @@ body {font-family: "Roboto", sans-serif;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--dark-navi-color);
+    transition: color 250ms var(--transform-style);
     
 }
 
 .nav-link:hover, .nav-link:focus {
     color: var(--slate-text-color);
 }
-
 .nav-link:active {color: #4D5AE5;}
+
+.current-page::after {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    content: '';
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: #404BBF;
+    border-radius: 2px;
+}
 
 .contacts-list {
     margin-left: auto;
@@ -136,7 +152,9 @@ body {font-family: "Roboto", sans-serif;
 .mail-link, .phone-link {
     line-height: 1.5; 
     letter-spacing: 0.02em;
-    color: var(--slate-text-color);}    
+    color: var(--slate-text-color);
+    transition: color 250ms var(--transform-style);
+}    
  
 .mail-link:hover, .mail-link:focus {
     color: var(--primary-brand-color)
@@ -185,15 +203,17 @@ body {font-family: "Roboto", sans-serif;
     font-size: 16px;
     line-height: 1.18;
     letter-spacing: 0.04em;
-    cursor: pointer;     
-    
+    cursor: pointer;    
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    transition: box-shadow 250ms var(--transform-style),
+    background-color 250ms var(--transform-style);
 }
+
 .hero-button:hover, .hero-button:focus { 
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
-0px 1px 1px rgba(46, 47, 66, 0.16), 
-0px 2px 1px rgba(46, 47, 66, 0.08);
-        }
+    0px 1px 1px rgba(46, 47, 66, 0.16), 
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 
 .hero-button:active {
     background-color: #404BBF;
@@ -229,8 +249,7 @@ body {font-family: "Roboto", sans-serif;
     letter-spacing: 0.02em;
     color: var(--dark-navi-color);}
 
-.benefits-list {
-    display: flex;}   
+.benefits-list {display: flex;}   
     
 .benefits-list .benefits-item + .benefits-item {
     margin-left: 24px;}   
@@ -239,8 +258,6 @@ body {font-family: "Roboto", sans-serif;
     width: 264px;
     line-height: 1.5;
     letter-spacing: 0.02em;}
-
-
 
 /* /main page section 2 */
 
@@ -260,8 +277,7 @@ padding-top: 0;}
     text-transform: capitalize;
     color: var(--dark-navi-color);}
 
-.services-list {
-    display: flex;
+.services-list {display: flex;
 }
 
 .services-list .services-item + .services-item {
@@ -341,9 +357,12 @@ padding-top: 0;}
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: #4D5AE5; 
+    background-color: #4D5AE5;
+    transition: background-color 250ms var(--transform-style); 
 }
 
+.team-social-link:hover, .team-social-link:focus
+{background-color: #404BBF;}
 
    
 /* /main page section 4 */
@@ -368,7 +387,6 @@ padding-top: 0;}
 {margin-left: 24px;}
 
 
-
 .customers-link {
     display: flex;
     justify-content: center;
@@ -378,14 +396,14 @@ padding-top: 0;}
     border: 1px solid #8E8F99;
     border-radius: 4px;
     fill:#8E8F99;
-}
+    transition: fill 250ms var(--transform-style), 
+    border 250ms var(--transform-style);}
 
 
 .customers-link:hover, .customers-link:focus {
     border: 1px solid #4D5AE5;
-    border-radius: 4px;
-    fill:#4D5AE5;
-}
+    fill:#4D5AE5;}
+    
 
 
 /* /main page section 5 */
@@ -445,6 +463,7 @@ padding-bottom: 100px;
     height: 40px;
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.1);
+    transition: background 250ms var(--transform-style);
 
 }
 
@@ -461,30 +480,33 @@ padding-bottom: 100px;
     position: fixed;
     top: 0;
     left: 0;
-    width: 1440px;
-    height: 677px;
-
+    width: 100%;
+    height: 100%;    
     background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 500ms var(--transform-style),
+    visibility 500ms var(--transform-style);
+     
 }
 
 .backdrop.is-hidden {
     opacity: 0;
     pointer-events: none;
-}
+    visibility: hidden;}
 
 .modal {
     position: absolute;
     top:50%;
     left:50%;
     transform: translate(-50%, -50%);
-
-    width: 408px;
-    height: 576px;
+        
+    min-width: 408px;
+    min-height: 576px;
     background-color: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 
     0px 1px 3px rgba(0, 0, 0, 0.12), 
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+        
 }
 
 .modal-btn {
@@ -533,7 +555,11 @@ padding-bottom: 100px;
     font-weight: 600;
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 0.04em;}
+    letter-spacing: 0.04em;
+    transition: box-shadow 250ms var(--transform-style),
+    color 250ms var(--transform-style),
+    background-color 250ms var(--transform-style);
+}
 
 .btn-link:hover, .btn-link:focus {
     background-color: var(--primary-bg-color);
@@ -568,6 +594,7 @@ padding-bottom: 100px;
     margin-top: var(--work-cards-colum-gap);
     border-bottom: 0.5px solid #F4F4FD;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+    transition: box-shadow 250ms var(--transform-style);
 }
 
 .work-item:hover, .work-item:focus {
@@ -613,13 +640,8 @@ padding-bottom: 100px;
     background-color: var(--primary-bg-color);
     opacity: 0;
     transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    transition: transform 250ms var(--transform-style);
 }
-
-.work-item:hover .product-overlay
-{transform: translateY(0);
-    opacity: 1;}
 
 .product-action {
     position: absolute;
@@ -634,7 +656,17 @@ padding-bottom: 100px;
     opacity: 0;
     }
 
-.work-item:hover .product-action 
-{ opacity: 1;}
+.work-links:hover .product-overlay,
+.work-links:hover .product-action
+{transform: translateY(0);
+    opacity: 1;}
+
+.work-links:focus .product-overlay,
+.work-links:focus .product-action
+{transform: translateY(0);
+        opacity: 1;}
+
+
+
 
 
